tests/it/snapshots/it__test_on__error__balance..red=0.3.snap
---
source: tests/it/test_on.rs
info:
  program: hyprshade
  args:
    - "on"
    - vibrance
    - "--var"
    - balance..red=0.3
  env:
    HOME: /tmp/.tmp66Xwut/hyprshade-test-dir/home/
    XDG_CONFIG_HOME: /tmp/.tmp66Xwut/hyprshade-test-dir/home/.config
    __HYPRSHADE_MOCK_TIME: ""
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'balance..red=0.3' for '--var <KEY=VALUE>'

  tip: each word in KEY must be separated by exactly one '.'

For more information, try '--help'.
